fix timing bug in final example

--- a/icra2021.ipynb
+++ b/icra2021.ipynb
@@ -562,6 +562,7 @@
       },
       "source": [
         "# IV. ROBOTICS TOOLBOX\n",
+        "\n",
         "## A. Robot models"
       ]
     },
@@ -1554,7 +1555,7 @@
         "id": "VkOJJoRNNDj1"
       },
       "source": [
-        "To animate the robot within the browser tab, we create a Swift instance, add the robot"
+        "To animate the robot within the browser tab, we create a Swift instance, add the robot, and then, in a loop, update its configuration and `step` the simulation environment."
       ]
     },
     {
@@ -1566,15 +1567,13 @@
       "outputs": [],
       "source": [
         "from roboticstoolbox.backends.swift import Swift\n",
-        "import time\n",
         "qt = jtraj(panda.qz, panda.qr, 100)\n",
         "backend = Swift()\n",
-        "backend.launch()   # create graphical world\n",
-        "backend.add(panda) # add robot to the world\n",
+        "backend.launch(realtime=True)  # create graphical world\n",
+        "backend.add(panda)             # add robot to the world\n",
         "for q in qt.q:\n",
-        "    panda.q = q        # update the robot\n",
-        "    backend.step(0.2)    # display the world\n",
-        "    time.sleep(0.1)\n"
+        "    panda.q = q                # update the robot\n",
+        "    backend.step(dt=0.1)       # display/refresh the world\n"
       ]
     }
   ],
